<resources>
    <string name="google_api_key">AIzaSyAwCzokQL2z0JVw9HP_190Jy8q-aPhd8ww</string>
    <string name="app_name">@string/EmergencyPlus</string>
    <string name="EmergencyPlus">Emergency+</string>
    <string name="Call000">CALL 000</string>
    <string name="Home">Home</string>
    <string name="Map">Map</string>
    <string name="iosInfo">Info</string>
    <string name="IAgree">I Agree</string>
    <string name="Agree">Agree</string>
    <string name="Done">Done</string>
    <string name="Cancel">Cancel</string>
    <string name="TellOperatorLocation">Tell the operator your location</string>
    <string name="GPS">GPS COORDINATES</string>
    <string name="Lat">LAT:</string>
    <string name="LONG">LONG:</string>
    <string name="NOGPS">NO GPS AVAILABLE</string>
    <string name="NoAddress">No Address Detected</string>
    <string name="AddressUpdated">(Address updated %s)</string>
    <string name="Accurate">ACCURATE TO %d METRES</string>
    <string name="starting_app">Starting Emergency +</string>
    <string name="Ready">Emergency+ is ready to be used</string>
    <string name="SorryCrash">Sorry. The app just crashed.</string>
    <string name="ReadAccept">I have read and accept the Terms of Use.</string>
    <string name="TurnOffAirplane">Turn Off Airplane Mode to Allow Your Phone to Make a Call</string>
    <string name="noGPSDialogMessage">Turn On Location Services to Allow Emergency+ to Determine Your Location</string>
    <string name="LocationDisabled">Location Services Disabled\n%s needs access to your location to display your location and address. Please turn on Location Services in your device settings</string>
    <string name="BestAssist">Who is best to assist me?</string>
    <string name="Call">Call</string>
    <string name="CallString">Call %s</string>
    <string name="CallTZ000">CALL TRIPLE ZERO (000)</string>
    <string name="InjuredMedical">Is someone seriously injured or in need of urgent medical help?</string>
    <string name="LifePropertyThreatened">Is your life or property being threatened?</string>
    <string name="SeriousOrCrime">Have you just witnessed a serious accident or crime?</string>
    <string name="FocusedRelevant">Stay focused, stay relevant, stay on the line</string>
    <string name="CallSES132500">CALL STATE EMERGENCY SERVICE (132 500)</string>
    <string name="CallSES">Call State Emergency Service</string>
    <string name="ForFloodStormsCyclones">For emergency help in floods, storms and cyclones</string>
    <string name="CallPAL131444">CALL POLICE ASSISTANCE LINE (131 444)</string>
    <string name="CallPal">Call police assistance line</string>
    <string name="VictimPAL">If you are a victim of a crime, other than life threatening or time critical emergency situations, you should call 131 444 for police assistance.</string>
    <string name="OtherNational">Other national numbers</string>
    <string name="CallCrimeStoppers1800333000">CALL CRIMESTOPPERS (1800 333 000)</string>
    <string name="CallCrimestoppers">Call Crime Stoppers</string>
    <string name="CrimeStoppersInfo">Crime Stoppers is a community based initiative that provides members of the public the ability to provide crime information.</string>
    <string name="Anonymous">It can be anonymous.</string>
    <string name="CrimeStoppersVisit">Visit www.crimestoppers.com.au</string>
    <string name="CallHealthDirect1800022222">CALL HEALTHDIRECT 1800 022 222</string>
    <string name="CallHealthDirect">Call Health Direct</string>
    <string name="HealthDirectInfo">If you have a health concern and you\'re not sure what to do, simply call 1800 022 222 and speak with a registered nurse.</string>
    <string name="HealthDirectAdvice">You\'ll get fast, expert advice about any health issue, helping you make an informed decision about how to manage it.</string>
    <string name="NRS">NATIONAL RELAY SERVICE</string>
    <string name="DeafHearing">Are you deaf or hard-of-hearing?</string>
    <string name="Speech">Do you have a speech impairment?</string>
    <string name="NRSInfo">You can call any of these emergency or assistance lines through the NRS.</string>
    <string name="RelayOfficerInfo">You will be connected to a relay officer who will stay on the line to relay your conversation with the service you are calling.</string>
    <string name="NRSMore">Find out more about using the NRS to contact emergency services.</string>
    <string name="TapNRSIcon">Tap the NRS icon to visit the website.</string>
    <string name="Vision">The Triple Zero Awareness Work Group wishes to acknowledge the valuable assistance of Vision Australia in improving the accessibility of this app</string>
    <string name="LocateMe">Locate me</string>
    <string name="ViewDisclaimer">VIEW DISCLAIMER</string>
    <string name="LifeThreatCritical">For a life threatening or critical emergency</string>
    <string name="OutsideAus">Your GPS coordinates are outside Australia. Call 112?</string>
    <string name="PoliceNonUrgent">Police Assistance Line for non-urgent help</string>
    <string name="StateEmergencyHelp">State Emergency Services for flood, storm and cyclone emergency help</string>
    <string name="InfoPolice">For providing information to police</string>
    <string name="HealthConcerns">For advice about health concerns</string>
    <string name="relay_service_url">http://relayservice.gov.au/making-a-call/emergency-calls</string>
    <string name="number_Emergency">000</string>
    <string name="number_Emergency2">112</string>
    <string name="number_Police">131444</string>
    <string name="number_SES">132500</string>
    <string name="number_CrimeStoppers">1800333000</string>
    <string name="number_HealthDirect">1800022222</string>
    <string name="OneSecondAgo">1 sec ago</string>
    <string name="SecondsAgo">%d secs ago</string>
    <string name="OneMinAgo">1 min ago</string>
    <string name="MinutesAgo">%d mins ago</string>
    <string name="OneHourAgo">1 hr ago</string>
    <string name="HoursAgo">%d hrs ago</string>
    <string name="DaysAgo">%d days ago</string>
    <string name="OneMonthAgo">1 month ago</string>
    <string name="MonthsAgo">%d months ago</string>
    <string name="OneYearAgo">1 year ago</string>
    <string name="YearsAgo">%d years ago</string>
    <string name="DISCLAIMER_1">The mobile device application including its functions and tools that is available for free download from the Google Play under the name \"Emergency+\" that is subject to this license is referred to in this license as the \"Licensed Application\". Fire and Rescue New South Wales for and on behalf of the Crown in right of the State of New South Wales (“FRNSW”) has been a party to the development of the Licensed Application as part of the \"Triple Zero Awareness Work Group\". The Licensed Application includes Content (as defined in paragraph (f) below) owned by Crime Stoppers Australia Limited, the NSW State Emergency Service, NSW Police Force and Emergency Management Australia. The Licensed Application is licensed, not sold, to You for use only under the terms of this license.  FRNSW and You acknowledge that this license is concluded between FRNSW and You only, and not with any member of the \"Triple Zero Awareness Work Group\", Crime Stoppers Australia Limited or Google. Subject to the terms and conditions of this license, FRNSW is solely responsible for the Licensed Application and the content thereof. FRNSW reserves all rights not expressly granted to You.</string>
    <string name="DISCLAIMER_2">a. Description of the Licensed Application: The service provided by the Licensed Application allows You to call an emergency service appropriate to the circumstances of Your event from Your mobile device and identify your location to the emergency service operator using GPS coordinates (the \"Service\"). The Service is subject to the following limitations: (i) continued use of GPS may dramatically decrease battery life; (ii) there is a risk that the operator receiving an emergency call may transcribe the location coordinates incorrectly in which case the relevant emergency service will be sent to the wrong location; (iii) the availability and accuracy of GPS information is subject to limitations arising due to availability of signals, the relevant mobile device, location and geography (GPS signals may be blocked by dense bush, or tall buildings, and do not penetrate indoor spaces well); and (iv) the Licensed Application may only be used in Australia and the Service is only available in Australia. Accordingly, You accept and acknowledge that use of the Licensed Application may not be as accurate as calling emergency services from a land line and is subject to the foregoing limitations.</string>
    <string name="DISCLAIMER_3">b. Scope of License: This license granted to You for the Licensed Application by FRNSW is limited to a non-transferable license to use the Licensed Application on any iPhone or iPod touch that You own or control and as permitted by the Usage Rules set forth in Section 9.b. of the Google Play Terms and Conditions (the “Usage Rules”). This license does not allow You to use the Licensed Application on any iPod touch or iPhone that You do not own or control, and You may not distribute or make the Licensed Application available over a network where it could be used by multiple devices at the same time. You may not rent, lease, lend, sell, redistribute or sublicense the Licensed Application. You may not copy (except as expressly permitted by this license and the Usage Rules), decompile, reverse engineer, disassemble, attempt to derive the source code of, modify, or create derivative works of the Licensed Application, any updates, or any part thereof (except as and only to the extent any foregoing restriction is prohibited by applicable law or to the extent as may be permitted by the licensing terms governing use of any open sourced components included with the Licensed Application). Any attempt to do so is a violation of the rights of FRNSW and its licensors. If You breach this restriction, You may be subject to prosecution and damages. The terms of the license will govern any upgrades provided by FRNSW that replace and/or supplement the original Licensed Application, unless such upgrade is accompanied by a separate license in which case the terms of that license will govern.</string>
    <string name="DISCLAIMER_4">c. Consent to Use of Data: You agree that FRNSW may collect and use technical data and related information, including but not limited to technical information about Your device, system and application software, and peripherals, that is gathered periodically to facilitate the provision of software updates, product support and other services to You (if any) related to the Licensed Application. FRNSW may use this information, as long as it is in a form that does not personally identify You, to improve its products or to provide services or technologies to You. To the extent that You furnish any personal information while using the Licensed Application, such personal information will be dealt with by FRNSW in accordance with FRNSW\'s privacy policy as amended from time to time (see &lt;a href="http://www.fire.nsw.gov.au/page.php?id=700"&gt;www.fire.nsw.gov.au&lt;/a&gt;).</string>
    <string name="DISCLAIMER_5">d. Termination: The license is effective until terminated by You or FRNSW. Your rights under this license will terminate automatically without notice from FRNSW if You fail to comply with any term(s) of this license. Upon termination of the license, You shall cease all use of the Licensed Application, and destroy all copies, full or partial, of the Licensed Application.</string>
</resources>