<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
     Demonstrates basic application screen.
     See corresponding Java code com.android.sdk.app.HelloWorld.java.
-->

<!--
     This screen consists of a single text field that
     displays our "Hello, World!" text.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/map_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnCall000"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/Call000"
        android:text="@string/Call000"
        android:textSize="40dp"
        android:textStyle="bold"
        android:background="@drawable/redcall_btnbackground"
        />

    <!-- No GPS -->
    <RelativeLayout
        android:id="@+id/rlNoGPS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_border" >

        <TextView
            android:id="@+id/tvNoGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocationDisabled"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Location Details -->
    <RelativeLayout
        android:id="@+id/rlAddressLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_border" >

        <TextView
            android:id="@+id/gpsCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GPS"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/addressUpdatedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/gpsCoordinates"
            android:text="@string/AddressUpdated"
            android:textColor="@color/light_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/addressUpdatedOtherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/gpsCoordinates"
            android:layout_below="@+id/gpsCoordinates"
            android:text="@string/AddressUpdated"
            android:textColor="@color/light_blue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/latTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/addressUpdatedOtherTextView"
            android:layout_below="@+id/addressUpdatedOtherTextView"
            android:text="@string/Lat"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressUpdatedOtherTextView"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/latValueTextView"
            android:text="@string/LONG"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/latTextView"
            android:layout_below="@id/gpsCoordinates"
            android:layout_toRightOf="@+id/latTextView"
            android:layout_marginLeft="3dp"
            android:text="          "
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/longTextView"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/longTextView"
            android:layout_marginLeft="3dp"
            android:text="          "
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/latTextView"
            android:text="@string/NoAddress"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/accuracyTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressTextView"
            android:text="@string/Accurate"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/ibtnMyLocation"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignRight="@id/accuracyTextView"
            android:layout_alignBottom="@id/accuracyTextView"
            android:contentDescription="@string/LocateMe"
            android:background="@drawable/navlocate"
            />

    </RelativeLayout>



</RelativeLayout>